- #7092 Synergy is running after quit on Linux
- #7095 Update account and upgrade links
- #7096 The system duplicates hotkeys in setup

Enhancements:
- #7068 Add Synergy restart when settings changed
- #7072 Ability to run synergy as a pre-login agent
- #7074 Add Synergy restart when server settings changed

Github Actions:
- #1043 Adding upload to s3 feature on all OSes
===========

v1.14.1-stable
===========
Bug fixes:
- #7016 Fix script that generates version number
- #7006 Resolve code scanning issues
- #7012 Fix natural horizontal scrolling on Mac client
- #6997 Allow Windows to go to sleep depending on system preferences
- #7001 Add option to prevent computer from going to sleep
- #7029 | #7033 Wrong encoding for text copied between linux and windows
- #7015 Fix Windows service not starting up after sleep
- #7036 Fix tray icon not changing theme on Big Sur
- #7046 Fix MacOS 10.13 build
- #7049 Scroll doesn't work in case of macOS is server
- #7057 | #7058 Fix copy paste logic, when OS reported about clipboard update too late
- #7055 | #7066 Add secure input notification on Linux
- #7052 Add secure input notification on Windows
- #7047 | #7060 Fix prevent sleep option on Mac and Windows
- #7064 There is no secure input notification if user moves pointer between clients

Enhancements:
- #6998 Remove functionality related to the screen saver synchronisation
- #7026 Update the way we package OpenSSL for Windows build
- #7035 Add Fedora 34 build
- #7037 Add Ubuntu 21.04 build
- #7030 | #7041 | #7043 Add user notification for secure input on Mac
- #7044 Apply natural scroll setting independently on each client
- #7040 Support "Kana" and "Eisu" keys on Japanese Apple Pro Keyboard (JIS)
- #7047 Add prevent sleep option support to Linux
===========

v1.14.0-stable
===========
Bug fixes:
- #6953 | #6961 The system does not update server name in Server configuration
- #6966 macOS 10.13 missing build number