@@ -1,15 +1,18 @@
-name: Debian-Upload
+name: Debian- Core
 
 on:
   release:
     types: [created]
 
 jobs:
-  build-arch64:
+  build-core-debian:
     runs-on: ubuntu-latest
     container: symless/synergy-core:${{ matrix.distro }}
     env:
       GIT_COMMIT: ${{ github.sha }}
+      SYNERGY_NO_LEGACY: "1"
+      SYNERGY_NO_TESTS: "1"
+      SYNERGY_STATIC_OPENSSL: "1"
     strategy:
       matrix:
         include:
@@ -19,20 +22,20 @@ jobs:
     name: ${{ matrix.distro }}
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Build
-      run: |
-        mkdir build
-        cd build
-        cmake -DCMAKE_BUILD_TYPE=Release ..
-        . ./version
-        make -j
+      - name: Build
+        run: |
+          mkdir build
+          cd build
+          cmake -DCMAKE_BUILD_TYPE=Release ..
+          . ./version
+          make -j
 
-    - uses: shallwefootball/s3-upload-action@master
-      with:
-        aws_key_id: ${{ secrets.AWS_S3_UPLOAD_KEY_ID }}
-        aws_secret_access_key: ${{ secrets.AWS_S3_UPLOAD_SECRET }}
-        aws_bucket: ${{ secrets.AWS_BUCKET }}
-        source_dir: ./build/bin
-        destination_dir: "./synergy3/latest/${{matrix.distro}}/"
+      - uses: shallwefootball/s3-upload-action@master
+        with:
+          aws_key_id: ${{ secrets.AWS_S3_UPLOAD_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_S3_UPLOAD_SECRET }}
+          aws_bucket: ${{ secrets.AWS_BUCKET }}
+          source_dir: ./build/bin
+          destination_dir: "./synergy3/latest/${{matrix.distro}}/"
