@@ -1,45 +1,0 @@
-name: Mac-10.13-Upload
-
-on:
-  release:
-    types: [created]
-
-jobs:
-  build-on-mac-10_13:
-    runs-on: [self-hosted, macOS, X64, 10.13]
-    env:
-      GIT_COMMIT: ${{ github.sha }}
-      Qt5_DIR: /usr/local/opt/qt/5.15.2/clang_64
-      OpenSSL_DIR: /usr/local/ssl
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup Environment
-        run: |
-          python3 -m pip install dmgbuild
-      
-      - name: Build SYNERGY
-        env:
-          CMAKE_PREFIX_PATH: "${{ env.Qt5_DIR }};${{ env.OpenSSL_DIR }}"
-        run: |
-          export PATH="$Qt5_DIR/bin:$PATH"
-          python3 CI/build_version.py
-          mkdir build
-          cd build
-          cmake \
-            -DCMAKE_OSX_DEPLOYMENT_TARGET=10.13 \
-            -DCMAKE_OSX_ARCHITECTURES=x86_64 \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_CONFIGURATION_TYPES=Release ..
-          . ./version
-          make -j
-          make install/strip
-
-      - uses: shallwefootball/s3-upload-action@master
-        with:
-          aws_key_id: ${{ secrets.AWS_S3_UPLOAD_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_S3_UPLOAD_SECRET }}
-          aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: ./build/bin
-          destination_dir: "./synergy3/latest/macOS_10.13/"
