@@ -1,13 +1,11 @@
-name: Mac
+name: macOS - Core
 
 on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+  release:
+    types: [created]
 
 jobs:
-  test-macos:
+  build-core-macos:
     runs-on: ${{ matrix.os }}
 
     defaults:
@@ -20,19 +18,23 @@ jobs:
           - os: "macos-10.15"
             target: "10.14"
             shell: "bash"
+            destination: macOS_x64
           - os: [self-hosted, macOS, arm64]
             target: ""
             shell: "/usr/bin/arch -arch arm64e /bin/bash --noprofile --norc -eo pipefail {0}"
+            destination: macOS_arm64
 
     env:
       GIT_COMMIT: ${{ github.sha }}
+      SYNERGY_NO_LEGACY: "1"
+      SYNERGY_NO_TESTS: "1"
+      SYNERGY_STATIC_OPENSSL: "1"
 
     steps:
       - uses: actions/checkout@v2
 
       - name: Install brew dependencies
         run: |
-          brew list qt5 &>/dev/null || brew install qt5
           brew list openssl &>/dev/null || brew install openssl
 
       - name: Build
@@ -43,9 +45,14 @@ jobs:
           cd build
           cmake \
             -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_PREFIX_PATH="$(brew --prefix qt5);$(brew --prefix openssl)" ..
+            -DCMAKE_PREFIX_PATH="$(brew --prefix openssl)" ..
           . ./version
           make -j
 
-      - name: Run unit test
-        run: ./build/bin/unittests
+      - uses: shallwefootball/s3-upload-action@master
+        with:
+          aws_key_id: ${{ secrets.AWS_S3_UPLOAD_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_S3_UPLOAD_SECRET }}
+          aws_bucket: ${{ secrets.AWS_BUCKET }}
+          source_dir: ./build/bin
+          destination_dir: "./synergy3/latest/${{ matrix.destination }}/"
