@@ -14,11 +14,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
+add_subdirectory(synergyd)
 add_subdirectory(synergyc)
 add_subdirectory(synergys)
 add_subdirectory(syntool)
-
-if (SYNERGY_BUILD_LEGACY_SERVICE)
-    add_subdirectory(synergyd)
-endif (SYNERGY_BUILD_LEGACY_SERVICE)
-
