@@ -20,6 +20,7 @@ Enhancements:
 
 Github Actions:
 - #1043 Adding upload to s3 feature on all OSes
+- #7098 Add Apple M1 runner
 ===========
 
 v1.14.1-stable
